tests/errors/codegen/fortran_blocking/FORTRAN_ALLOCATABLE_IN_EXPRESSION.py
# An allocatable function cannot be used in an expression
# pylint: disable=missing-function-docstring, missing-module-docstring
import numpy as np
a = np.empty(4)*5
